...
                    <navigationItem key="navigationItem" id="oNF-ff-XlH">
                        <nil key="title"/>
                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="epk-hT-IAC">
                            <rect key="frame" x="114.5" y="5.5" width="185" height="33"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="Ascending"/>
                                <segment title="Descending"/>
                            </segments>
                            <connections>
                                <action selector="changeOrder:" destination="BYZ-38-t0r" eventType="valueChanged" id="vIq-Fa-Rin"/>
                            </connections>
                        </segmentedControl>
                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="refresh" id="JgI-19-hQT">
...
